<resources>
    <string name="app_name">UBee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">메뉴</string>
    <string name="text_announce_cost">2023 우비 요금 조정 안내</string>
    <string name="event_text">우비 예약시 사이드메뉴 1개 제공</string>
    <string name="qr_scan">QR 스캔하고 대여하기</string>
    <string name="qr_code_input">코드 입력하기</string>
    <string name="map_string">주변 우비 찾고 우비 대여하기</string>
    <string name="map_search_string">대여장소를 검색하세요.</string>
    <string name="qr_code">우산에 있는 QR Code를 스캔해주세요.</string>
    <string name="login_id_hint"><font size="16">아이디</font></string>
    <string name="login_pw_hint"><font size="16">비밀번호</font></string>
    <string name="signup_name_hint"><font size="16">이름 입력</font></string>
    <string name="signup_ssn_hint"><font size="16">주민등록번호 앞 6자리</font></string>
    <string name="signup_email_hint"><font size="16">이메일 입력</font></string>
    <string name="signup_password_hint"><font size="16">비밀번호 입력</font></string>
    <string name="signup_phonenum_hint"><font size="16">전화번호 입력</font></string>
    <string name="signup_signnum_hint"><font size="16">인증번호 입력</font></string>
    <string name="uv_num"><font color="#E01919" size="16">0</font></string>
    <string name="rain_num"><font color="#1757A6" size="16">0</font></string>
    <string name="ub_service_banner"><font color="#41A6DA" size="15">우비 예약 시 </font><font color="#0085C9" size ="15">사이드 메뉴 1개 제공</font></string>
    <string name="uv_key">nGo5x8Xykd2+xqgTIOehhXd4Xf+0pLcBs5dlL8bhawf5TIS5DLCCEF6qF54BtVg4A5tYFQDnO45qdtsHRL9Qvg==</string>
    <string name="rain_key">nGo5x8Xykd2+xqgTIOehhXd4Xf+0pLcBs5dlL8bhawf5TIS5DLCCEF6qF54BtVg4A5tYFQDnO45qdtsHRL9Qvg==</string>

</resources>